Fix code overflow. Blog->Posts

--- a/assets/scss/_article-grid.scss
+++ b/assets/scss/_article-grid.scss
@@ -1,12 +1,11 @@
 article {
   display: grid;
   grid-template-columns: 1fr 0.5in [start] 1.25in 5in 1.25in [end] 0.5in 1fr;
-
   * {
     grid-column: start / end;
   }
   
   @media (max-width: 8.5in) {
-    grid-template-columns: 1fr 5% [start] 15% 60% 15% [end] 5% 1fr;
+    grid-template-columns: auto 5fr [start] 15fr 60fr 15fr [end] 5fr auto;
   }
 }
